--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/191/index.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/191/index.mdx
@@ -47,35 +47,35 @@ Graphite Grid is declarative and consistent, leveraging state signals to ensure 
 
 **📦 [React-Router 6.24 - Lazy Route Discovery](https://github.com/remix-run/react-router/blob/main/CHANGELOG.md#v6240)**
 
-This React Router release includes a new `unstable_patchRoutesOnMiss` hook that will be called when React Router can’t match any existing route. It permits you to load additional routes and implement code splitting for your routes instead of keeping them all in a single monolithic module. A welcome feature for large apps with thousands of routes, that now don’t need to load all of them upfront, delaying hydration.
+Cette version de React Router inclut un nouveau hook `unstable_patchRoutesOnMiss` qui sera appelé lorsque React Router ne peut pas trouver de route existante. Cela vous permet de charger des routes supplémentaires et de séparer le code de vos routes au lieu de les garder toutes dans un seul module monolithique. Une fonctionnalité bienvenue pour les grandes applications avec des milliers de routes, qui n'ont maintenant plus besoin de toutes les charger en amont, ce qui retarde l'hydratation.
 
-Remix was supposed to take a nap, but apparently not yet! 📦 [Remix 2.10](https://remix.run/docs/en/main/start/changelog#v2100) is out and already leverages that new React Router feature by exposing it through a convenient [“Fog of War”](https://remix.run/docs/en/main/guides/fog-of-war) feature that you can enable with a simple `future.unstable_fogOfWar` flag. An early discovery optimization has also been implemented to avoid waterfalls.
+Remix devait faire une pause, mais ce n'est apparemment pas encore le cas ! 📦 [Remix 2.10](https://remix.run/docs/en/main/start/changelog#v2100) est sorti et exploite déjà la nouvelle fonctionnalité React Router en l'exposant à travers une fonctionnalité pratique [« Fog of War »](https://remix.run/docs/en/main/guides/fog-of-war) que vous pouvez activer avec un simple flag `future.unstable_fogOfWar`. Une optimisation de la récente découverte a également été implémentée pour éviter les waterfalls.
 
 ---
 
 - 💸 [Meilisearch — Build fast, typo-tolerant search with React](https://dub.sh/ueC2f57)
-- 👀 [React.dev PR - Add branding context menu](https://github.com/reactjs/react.dev/pull/6986): Right-click the website navbar logo to access the official svgs and brand colors of React.
+- 👀 [React.dev PR - Add branding context menu](https://github.com/reactjs/react.dev/pull/6986) : Cliquez avec le bouton droit sur le logo de la barre de navigation du site web pour accéder aux svgs officiels et aux couleurs de la marque React.
 - 👀 [Next.js PR draft - `nextConfig.requiredEnv`](https://github.com/vercel/next.js/pull/67187)
 - 👀 [Next.js PR draft - type check for `env`](https://github.com/vercel/next.js/pull/67157s)
-- 🐦 [Joe Savona - "Some thoughts on the suspense changes from 19 RC"](https://x.com/en_JS/status/1803480672327311425): To avoid situations such as past week’s Suspense drama, the React team is working on changes to get feedback earlier (working groups, RFC, canary…).
-- 🐦 [Lee Robinsin - "Here's where we're headed with caching in Next.js"](https://x.com/leeerob/status/1803824227704877236): “Our goal is to make all async operations (like doing a `fetch`) opt into dynamic rendering”, “We believe Partial Prerendering will become the default”.
-- 🗓️ [React Rally](https://reactrally.com/?utm_source=thisweekinreact) - 🇺🇸Utah - 12-13, August - Get a 10% discount with code "TWIR". There’s a React Server Components [workshop](https://reactrally.com/workshop) with Kent C. Dodds
+- 🐦 [Joe Savona - "Some thoughts on the suspense changes from 19 RC"](https://x.com/en_JS/status/1803480672327311425) : Pour éviter des situations telles que le feuilleton Suspense de la semaine dernière, l'équipe React travaille sur des changements afin d'obtenir des retours plus tôt (groupes de travail, RFC, canary...).
+- 🐦 [Lee Robinsin - "Here's where we're headed with caching in Next.js"](https://x.com/leeerob/status/1803824227704877236) : « Notre objectif est de faire en sorte que toutes les opérations asynchrones (comme faire un `fetch`) optent pour le rendu dynamique », « Nous pensons que le Prerendering partiel deviendra la valeur par défaut ».
+- 🗓️ [React Rally](https://reactrally.com/?utm_source=thisweekinreact) - 🇺🇸Utah - 12-13 août - 10% de réduction avec le code « TWIR ». Il y a un [workshop](https://reactrally.com/workshop) sur les React Server Components avec Kent C. Dodds
 - 📨 [ECMAScript News - Discover our partners' newsletter to keep up to date with ES, TC39, JS tooling, and runtimes](https://ecmascript.news/?utm_source=thisweekinreact)
-- 📜 [Component, colocation, composition: A note on the state of React](https://bobaekang.com/blog/component-colocation-composition/): The recent Suspense drama highlights the gap between React’s component-oriented vision and its current limitations.
-- 📜 [From markdown to video - Animated code walkthroughs with Code Hike and Remotion](https://v1.codehike.org/blog/remotion): If you have seen recent code animation videos of Matt Pocock or Delba, here’s a great article and demos to understand how it works.
-- 📜 [Understanding React Compiler](https://tonyalicea.dev/blog/understanding-react-compiler/): Explains how the React compiler work, starting from the basics (transpiler, AST, memoization), then analyzing the compiler output of a concrete example.
-- 📜 [Wait for pending: A (not great) alternative Suspense algorithm](https://dev.to/alexandereardon/wait-for-pending-a-not-great-alternative-suspense-algorithm-1gdl): Explores the possibility of a different algorithm for Suspense, with different tradeoffs.
-- 📜 [How to make draggable Framer Motion elements snap to breakpoints](https://sinja.io/blog/framer-motion-drag-snap-points): Interactive article implementation snap points on top of Framer Motion, including inertia/velocity support.
-- 📜 [Mobx Memoizes Components (You don't need React Compiler)](https://www.mikejohnson.dev/posts/2024/06/mobx-react-compiler): Takes an existing demo using the React compiler and turns it into an optimized Mobx app with minimal changes. MobX prevents re-renders by auto-tracking dependencies. Note this [Mobx issue](https://github.com/mobxjs/mobx/issues/3874) explains why Mobx (based on proxies) is not compatible with the compiler, and lib creator also confirms it’s already optimized.
-- 📜 [Web Workers, Comlink, Vite and TanStack Query](https://johnnyreilly.com/web-workers-comlink-vite-tanstack-query): React Query being an “async state manager”, it also works well to offload expensive work from the main thread.
-- 📜 [Storybook - Visual testing: The greatest trick in UI development](https://storybook.js.org/blog/visual-testing-is-the-greatest-trick-in-ui-development/): I agree that too many devs miss out on visual regression testing. It has a really great ROI, considering how easy it is to add to an existing Storybook. As this article shows, covering the same component with React Testing Library requires more work.
-- 📜 [Communication Between Client Components in Next.js](https://www.thisdot.co/blog/communication-between-client-components-in-next-js): With RSCs, new challenges emerged to make 2 client components communicate, and you might not be able to lift the state up unless the parent is also a client component. This article proposes 3 solutions: using a Provider, search params, and server state.
-- 📜 [How to Validate Form in Remix with clientAction](https://sergiodxa.com/tutorials/validate-form-in-remix-with-clientaction): Using the new Remix `clientAction` export can nicely complete the server `action` validation and progressively enhance your form with local errors.
-- 📜 [Type-safe TanStack Query with OpenAPI](https://ruanmartinelli.com/blog/tanstack-query-openapi): Shows how to create generic React Query hooks (`useGetQuery`, `usePostMutation`...) that are fully typed according to an OpenAPI specification.
+- 📜 [Component, colocation, composition: A note on the state of React](https://bobaekang.com/blog/component-colocation-composition/) : Le récent épisode de Suspense met en évidence le décalage entre la vision de React, orientée vers les composants, et ses contraintes actuelles.
+- 📜 [From markdown to video - Animated code walkthroughs with Code Hike and Remotion](https://v1.codehike.org/blog/remotion) : Si vous avez vu les récentes vidéos d'animation de code de Matt Pocock ou de Delba, voici un excellent article et des démonstrations pour comprendre comment cela fonctionne.
+- 📜 [Understanding React Compiler](https://tonyalicea.dev/blog/understanding-react-compiler/) : Explique comment fonctionne le compilateur React, en commençant par les bases (transpiler, AST, mémoïsation), puis en analysant la sortie du compilateur d'un exemple concret.
+- 📜 [Wait for pending: A (not great) alternative Suspense algorithm](https://dev.to/alexandereardon/wait-for-pending-a-not-great-alternative-suspense-algorithm-1gdl) : Examine la possibilité d'utiliser un algorithme différent pour Suspense, avec des compromis différents.
+- 📜 [How to make draggable Framer Motion elements snap to breakpoints](https://sinja.io/blog/framer-motion-drag-snap-points) : Article interactif implémentant des points de fixation au-dessus de Framer Motion, y compris la prise en charge de l'inertie et de la vélocité.
+- 📜 [Mobx Memoizes Components (You don't need React Compiler)](https://www.mikejohnson.dev/posts/2024/06/mobx-react-compiler) : Prend une démo existante utilisant le compilateur React et la transforme en une application Mobx optimisée avec un minimum de changements. MobX évite les re-renders en suivant automatiquement les dépendances. Notez que cette [issue Mobx](https://github.com/mobxjs/mobx/issues/3874) explique pourquoi Mobx (basé sur des proxies) n'est pas compatible avec le compilateur, et le créateur de la lib confirme également qu'elle est déjà optimisée.
+- 📜 [Web Workers, Comlink, Vite and TanStack Query](https://johnnyreilly.com/web-workers-comlink-vite-tanstack-query) : Comme React Query est un « gestionnaire d'état asynchrone », il fonctionne également très bien pour délester le thread principal des tâches coûteuses.
+- 📜 [Storybook - Visual testing: The greatest trick in UI development](https://storybook.js.org/blog/visual-testing-is-the-greatest-trick-in-ui-development/) : Je suis d'accord pour dire que trop de développeurs passent à côté des tests de régression visuels. Le retour sur investissement est vraiment excellent, compte tenu de la facilité avec laquelle il est possible de l'ajouter à un Storybook existant. Comme le montre cet article, couvrir le même composant avec React Testing Library demande plus de travail.
+- 📜 [Communication Between Client Components in Next.js](https://www.thisdot.co/blog/communication-between-client-components-in-next-js) : Avec les RSC, de nouveaux défis sont apparus pour faire communiquer 2 composants clients, et vous pourriez ne pas être en mesure de lever l'état à moins que le parent ne soit également un composant client. Cet article propose 3 solutions : l'utilisation d'un Provider, de paramètres de recherche et de l'état du serveur.
+- 📜 [How to Validate Form in Remix with clientAction](https://sergiodxa.com/tutorials/validate-form-in-remix-with-clientaction) : En utilisant le nouvel export Remix `clientAction`, vous pouvez compléter la validation `action` du serveur et enrichir progressivement votre formulaire avec des erreurs locales.
+- 📜 [Type-safe TanStack Query with OpenAPI](https://ruanmartinelli.com/blog/tanstack-query-openapi) : Montre comment créer des hooks génériques de React Query (`useGetQuery`, `usePostMutation`...) qui sont entièrement typés selon une spécification OpenAPI.
 - 📜 [How To Use Google Sheets as a Database With React via Next.js](https://thenewstack.io/how-to-use-google-sheets-as-a-database-with-react-and-ssr/)
 - 📜 [Is it ok to pass setState as a prop in React?](https://tigerabrodi.blog/is-it-ok-to-pass-setstate-as-a-prop-in-react)
-- 📦 [StyleX 0.7 - CLI (experimental), Literal names for CSS variables](https://stylexjs.com/blog/v0.7.0): New CLI transforms an entire folder and can be an alternative to the bundler integration.
-- 📦 [Next-Safe-Action 7.0 - Type safe and validated Server Actions](https://github.com/TheEdoRan/next-safe-action/releases/tag/v7.0.0): See also the [v6 to v7 migration guide](https://next-safe-action.dev/docs/migrations/v6-to-v7).
+- 📦 [StyleX 0.7 - CLI (experimental), Literal names for CSS variables](https://stylexjs.com/blog/v0.7.0) : Le nouveau CLI transforme un dossier entier et peut être une alternative à l'intégration du bundler.
+- 📦 [Next-Safe-Action 7.0 - Type safe and validated Server Actions](https://github.com/TheEdoRan/next-safe-action/releases/tag/v7.0.0) : Voir également le [guide de migration v6 vers v7](https://next-safe-action.dev/docs/migrations/v6-to-v7).
 - 📦 [Astro 4.11 - 500 page improvements, `<Code>` component Shiki transformer](https://astro.build/blog/astro-4110/)
 - 📦 [React-Admin 5.0 - Improves on UI, DX, app init, Data Providers, forms…](https://marmelab.com/blog/2024/06/20/react-admin-v5.html)
 - 📦 [Shopify Hydrogen Update - Visual Editor, Optimistic Cart, Vite stable, RichText component, SEO meta export…](https://hydrogen.shopify.dev/update/summer-editions-24-announcing-the-hydrogen-visual-editor-and-a-ton-of-dx-improvements)
@@ -118,17 +118,17 @@ Cette section est rédigée par [Benedikt](https://twitter.com/bndkt).
 
 - 💸 [WithFrame - Ready to Use React Native Components](https://withfra.me/?utm_source=thisweekinreact&utm_medium=email&utm_campaign=quick-link--4)
 - 🐦 [Marc Rousavy on how to get relevant log or crash information in RN for creating issues in open source libs](https://x.com/mrousavy/status/1805637303726973437)
-- 🗓️ [The Geek Conf](https://www.thegeekconf.com/?utm_source=thisweekinreact) - 🇩🇪 Berlin - 18 & 25 July - Get a 10% discount with code "TWIR". Mo Khazali — Head of Mobile at Theodo UK, Matteo Collina — CTO of Platformatic.dev, and Siddharth Kshetrapal —Staff software engineer at GitHub, will speak !
-- 🗓 [Chain React Conf](https://chainreactconf.com/?utm_source=thisweekinreact) - 🇺🇸 Portland, OR - July 17-19. The U.S. React Native Conference is back with engaging talks and hands-on workshops! Get 15% off your ticket with code “TWIR”
-- 👀 [Revert "Make the New Architecture the default"](https://github.com/facebook/react-native/commit/37e8fa113ef6a8be7cd057b2bf6ffaa4ae6439d9): it looks like turning the New Arch on by default might be postponed and will finally not be part of v0.75?
+- 🗓️ [The Geek Conf](https://www.thegeekconf.com/?utm_source=thisweekinreact) - 🇩🇪 Berlin - 18 & 25 juillet - Obtenez une réduction de 10% avec le code « TWIR ». Mo Khazali - Responsable de l'activité mobile chez Theodo UK, Matteo Collina - Directeur technique de Platformatic.dev, et Siddharth Kshetrapal - Ingénieur logiciel chez GitHub, interviendront !
+- 🗓 [Chain React Conf](https://chainreactconf.com/?utm_source=thisweekinreact) - 🇺🇸 Portland, OR - Du 17 au 19 juillet. La conférence américaine React Native est de retour avec des conférences captivantes et des ateliers pratiques ! Bénéficiez de 15% de réduction sur votre billet avec le code « TWIR »
+- 👀 [Revert "Make the New Architecture the default"](https://github.com/facebook/react-native/commit/37e8fa113ef6a8be7cd057b2bf6ffaa4ae6439d9) : Il semblerait que l'activation par défaut de la New Arch soit reportée et ne fasse finalement pas partie de la v0.75 ?
 - 👀 [Shopify FlashList PR - New architecture support merged (but not released yet)](https://github.com/Shopify/flash-list/pull/550)
 - 👀 [Fishjam Cloud - New project by Software Mansion to bring video streaming to React Native](https://cloud.fishjam.stream/)
 - 👀 [expo-router-native-intent-demo - Using +native-intent API in Expo Router to support "Copy to app" functionality on iOS](https://github.com/EvanBacon/expo-router-native-intent-demo)
-- 📜 [Client guide to React Native modules](https://ospfranco.com/client-guide-to-react-native-modules/): Oscar greatly explains the differences, pros, and cons of the different ways to expose native modules to React Native, and helps us choose the best solution depending on context.
-- 📜 [Bridging React Native and Rust via JSI](https://ditto.live/blog/bridging-react-native-and-rust-via-jsi): An article by Ditto, a data sync engine written in Rust, on how they bridged their core logic (in Rust) to RN via JSI.
-- 📜 [On-device AI/ML in React Native](https://blog.swmansion.com/on-device-ai-ml-in-react-native-137918d0331b): This is fascinating stuff, which would’ve been inconceivable only a short while ago. Building real-time camera filters with on-device AI in RN.
-- 📜 [From web to native with React Native and Expo](https://expo.dev/blog/from-web-to-native-with-react-native-and-expo): Describes the journey of a web dev who built their first mobile app using RN/Expo.
-- 📜 [Just as Google, BAM believes in Kotlin Multiplatform](https://www.bam.tech/article/just-as-google-bam-believes-in-kotlin-multiplatform): The mostly RN-focused company BAM finds CMP/KMP a compelling choice among the available cross-platform solutions and explains the advantages/limitations.
+- 📜 [Client guide to React Native modules](https://ospfranco.com/client-guide-to-react-native-modules/) : Oscar explique largement les différences, les avantages et les inconvénients des différentes façons d'exposer des modules natifs à React Native, et nous aide à choisir la meilleure solution en fonction du contexte.
+- 📜 [Bridging React Native and Rust via JSI](https://ditto.live/blog/bridging-react-native-and-rust-via-jsi) : Un article de Ditto, un moteur de synchronisation de données écrit en Rust, sur la façon dont ils ont fait le pont entre leur logique de base (en Rust) et RN via JSI.
+- 📜 [On-device AI/ML in React Native](https://blog.swmansion.com/on-device-ai-ml-in-react-native-137918d0331b) : Il s'agit d'un projet fascinant, qui aurait été inconcevable il y a encore peu de temps. Construire des filtres de caméra en temps réel avec l'IA de l'appareil dans RN.
+- 📜 [From web to native with React Native and Expo](https://expo.dev/blog/from-web-to-native-with-react-native-and-expo) : Décrit le parcours d'un développeur web qui a créé sa première application mobile en utilisant RN/Expo.
+- 📜 [Just as Google, BAM believes in Kotlin Multiplatform](https://www.bam.tech/article/just-as-google-bam-believes-in-kotlin-multiplatform) : La société BAM, principalement axée sur RN, estime que CMP/KMP est un choix convaincant parmi les solutions multiplateformes disponibles et en explique les avantages et les limites.c
 - 📜 [Expo - FCM v1 Migration Deadline Changed to July 20th](https://expo.dev/blog/fcm-v1-migration-deadline-changed-to-july-20th)
 - 🎥 [Simon Grimm - TV Apps with React Native](https://www.youtube.com/watch?v=4S7Ftg58Yeg)
 - 🎥 [JavaScript Mastery - Free 4,5h React Native Course for Beginners in 2024](https://www.youtube.com/watch?v=ZBCUegTZF7M)
