--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/192/index.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/192/index.mdx
@@ -52,24 +52,24 @@ Nous en avons déjà parlé dans notre dernier numéro, mais il y a maintenant u
 ---
 
 - 💸 [Meilisearch — Build fast, typo-tolerant search with React](https://dub.sh/0PeE0RQ)
-- 👀 [React Core PR - `ReactHTML.renderToMarkup`](https://github.com/facebook/react/pull/30105): A new `react-html`package is being introduced for producing HTML that’s not meant to be hydrated (like emails). It’s the successor of`renderToStaticMarkup`, supporting modern features like Suspense.
-- 👀 [React Core PR - `React.captureOwnerStack()`](http://github.com/facebook/react/pull/29923): From many PRs I see, a lot of effort is going on in the React repo to improve debugging, logging, and producing readable “component owner stack traces”. This new public API should be useful for framework authors to display an error dialog.
-- 👀 [Next.js PR - TypeScript config file (`next.config.ts`)](https://github.com/vercel/next.js/pull/63051): A welcome improvement for DX to have first-class TypeScript support in config files, not anymore limited to JSDoc comments.
-- 🗓️ [React Rally](https://reactrally.com/?utm_source=thisweekinreact) - 🇺🇸 Utah - 12-13, August - Get a [10% discount](https://ti.to/react-rally/react-rally-2024/discount/TWIR) with code "TWIR". An awesome line up announced with Kent C. Dodds, Cory House, Joel Hooks, Tejas Kumar.
-- 📜 [Sneaky React Memory Leaks: How the React compiler won't save you](http://schiener.io/2024-07-07/react-closures-compiler): This closes a great 3-part series on memory leaks in React. Kevin found a case where using the React Compiler would actually introduce a memory leak to code that wouldn’t leak otherwise. Using bind might be a decent workaround. Note that these memory issues are not limited to React, but happen due to using functional programming and closures in JS in general.
-- 📜 [How to Simplify Component Imports with TypeScript Namespaces](https://sergiodxa.com/tutorials/simplify-component-imports-with-typescript-namespaces): I admit I didn’t know this quite pragmatic React + TypeScript trick that [Matt Pocock also approves](https://x.com/mattpocockuk/status/1805606072167940167).
-- 📜 [How to protect against a security breach in React Server Components](https://www.nodejs-security.com/blog/how-to-protect-against-a-security-breach-in-react-server-components): Greatly illustrates that validating with Zod is not enough, and it’s important to check access control for any server action input.
-- 📜 [WorkOS - Migrating to Next.js App Router with zero downtime](https://workos.com/blog/migrating-to-next-js-app-router-with-zero-downtime): An incremental migration from pages to App Router does not give a great navigation UX. They found a clever way to expose the same app as both Pages Router and App Router, with the ability to switch routers through a query string param.
-- 📜 [Enhancing The New York Times Web Performance with React 18](https://open.nytimes.com/enhancing-the-new-york-times-web-performance-with-react-18-d6f91a7c5af8): They migrated from React 16 and see great benefits such as fewer re-renders and improved INP score. Also encountered some challenges due to stricter hydration requirements.
-- 📜 [Learn Suspense by Building a Suspense-Enabled Library](https://www.bbss.dev/posts/react-learn-suspense/): Creates a suspense-enabled `useFetch()` hook to broadly demonstrate how real-world libraries work.
-- 📜 [All About That Button, ’Bout That Button](https://blog.jim-nielsen.com/2024/all-about-that-button/): Remix encourages writing mutations as declarative HTML that works “before” JS, and other interesting button-related progressive enhancement things.
-- 📜 [Secret knowledge to self-host Next.js](https://www.flightcontrol.dev/blog/secret-knowledge-to-self-host-nextjs): Guide with everything you need for deploying production Next.js outside Vercel.
+- 👀 [React Core PR - `ReactHTML.renderToMarkup`](https://github.com/facebook/react/pull/30105) : Un nouveau package `react-html` est introduit pour produire du HTML qui n'est pas destiné à être hydraté (comme les emails). C'est le successeur de `renderToStaticMarkup`, supportant des fonctionnalités modernes comme Suspense.
+- 👀 [React Core PR - `React.captureOwnerStack()`](http://github.com/facebook/react/pull/29923) : D'après les nombreux PR que je vois, beaucoup d'efforts sont faits dans le repo de React pour améliorer le débogage, la journalisation et la production de « stack trace de son propre composant » lisible. Cette nouvelle API publique devrait être utile aux auteurs de frameworks pour afficher une boîte de dialogue d'erreur.
+- 👀 [Next.js PR - TypeScript config file (`next.config.ts`)](https://github.com/vercel/next.js/pull/63051) : Une amélioration appréciée de DX pour avoir un support TypeScript de première classe dans les fichiers de configuration, ne se limitant plus aux commentaires JSDoc.
+- 🗓️ [React Rally](https://reactrally.com/?utm_source=thisweekinreact) - 🇺🇸 Utah - 12-13 août - Obtenez [10% de réduction](https://ti.to/react-rally/react-rally-2024/discount/TWIR) avec le code « TWIR ». Une programmation impressionnante est annoncée avec Kent C. Dodds, Cory House, Joel Hooks, Tejas Kumar.
+- 📜 [Sneaky React Memory Leaks: How the React compiler won't save you](http://schiener.io/2024-07-07/react-closures-compiler) : Ceci clôture une excellente série de 3 parties sur les fuites de mémoire dans React. Kevin a trouvé un cas où l'utilisation du compilateur React introduisait une fuite mémoire dans un code qui n'en aurait pas eu normalement. L'utilisation de bind pourrait être une solution de contournement décente. Notez que ces problèmes de mémoire ne sont pas limités à React, mais sont dus à l'utilisation de la programmation fonctionnelle et des closures en JS en général.
+- 📜 [How to Simplify Component Imports with TypeScript Namespaces](https://sergiodxa.com/tutorials/simplify-component-imports-with-typescript-namespaces) : J'avoue que je ne connaissais pas cette astuce React + TypeScript assez pragmatique que [Matt Pocock approuve également](https://x.com/mattpocockuk/status/1805606072167940167).
+- 📜 [How to protect against a security breach in React Server Components](https://www.nodejs-security.com/blog/how-to-protect-against-a-security-breach-in-react-server-components) : Cela illustre parfaitement le fait que la validation avec Zod n'est pas suffisante, et qu'il est important de vérifier le contrôle d'accès pour toute entrée concernant une action du serveur.
+- 📜 [WorkOS - Migrating to Next.js App Router with zero downtime](https://workos.com/blog/migrating-to-next-js-app-router-with-zero-downtime) : Une migration incrémentale des pages vers l'App Router n'offre pas une grande qualité de navigation. Ils ont trouvé un moyen astucieux d'exposer la même application en tant que routeur de pages et routeur d'applications, avec la possibilité de changer de routeur par le biais d'un paramètre de chaîne de requête.
+- 📜 [Enhancing The New York Times Web Performance with React 18](https://open.nytimes.com/enhancing-the-new-york-times-web-performance-with-react-18-d6f91a7c5af8) : Ils ont migré depuis React 16 et constatent de grands bénéfices tels que la diminution des re-renders et l'amélioration du score INP. Ils ont également rencontré quelques difficultés en raison des exigences plus strictes en matière d'hydratation.
+- 📜 [Learn Suspense by Building a Suspense-Enabled Library](https://www.bbss.dev/posts/react-learn-suspense/) : Crée un hook `useFetch()` activé par suspense pour démontrer de manière générale comment les bibliothèques du monde réel fonctionnent.
+- 📜 [All About That Button, ’Bout That Button](https://blog.jim-nielsen.com/2024/all-about-that-button/) : Remix encourage l'écriture de mutations en HTML déclaratif qui fonctionne « avant » le JS, et d'autres choses intéressantes d'amélioration progressive liées aux boutons.
+- 📜 [Secret knowledge to self-host Next.js](https://www.flightcontrol.dev/blog/secret-knowledge-to-self-host-nextjs) : Guide contenant tout ce dont vous avez besoin pour déployer la production de Next.js en dehors de Vercel.
 - 📜 [5 Misconceptions about React Server Components](https://www.builder.io/blog/nextjs-react-server-components)
 - 📦 [chadcn/ui Charts - Collection of beautiful chart components, built using Recharts](https://ui.shadcn.com/docs/components/chart)
 - 📦 [Material UI 6.0 beta - Pigment CSS build-time CSS-in-JS support (optional), container queries](https://next.mui.com/material-ui/migration/migrating-to-v6/)
 - 📦 [react-three/xr 6.0 - AR/VR for react-three-fiber](https://github.com/pmndrs/xr)
 - 📦 [Motion-Primitives - Beautifully designed motions components based on Framer Motion](https://motion-primitives.com/)
-- 🎥 [Jack Herrington - Warning: React 19's use Hook Can Impact App Performance](https://www.youtube.com/watch?v=t6MeFVF3V9I): TIL about a surprising React implementation detail when it first encounters a “use” hook.
+- 🎥 [Jack Herrington - Warning: React 19's use Hook Can Impact App Performance](https://www.youtube.com/watch?v=t6MeFVF3V9I) : J'ai appris un détail surprenant concernant l'implémentation de React lorsqu'il rencontre pour la première fois un hook « use ».
 - 🎙️ [PodRocket - React Compiler with Sathya Gunasekaran and Joe Savona](https://podrocket.logrocket.com/react-compiler-sathya-gunasekaran-joe-savona)
 
 **Bonus :**
@@ -134,7 +134,7 @@ Future-proof your auth stack with [WorkOS](https://workos.com/?utm_source=thiswe
 
 **[react-native-filament](https://github.com/margelo/react-native-filament)**
 
-The Margelo team released an impressive new real-time physically based 3D rendering engine for React Native, based on Google Filament. It’s GPU-accelerated by Metal/Vulkan, rendered on a separate thread, works with Reanimated, and already supports the New Architecture and Expo. The readme explains well how it differs from existing 3D solutions based on expo-gl (expo-three and react-three-fiber RN). With Skia and Filament, the future looks bright for React Native's 2D/3D capabilities.
+L'équipe Margelo a publié un nouveau moteur de rendu 3D temps réel basé sur la physique pour React Native, basé sur Google Filament. Il est accéléré par le GPU grâce à Metal/Vulkan, rendu sur un thread séparé, fonctionne avec Reanimated, et supporte déjà la Nouvelle Architecture et Expo. Le readme explique bien en quoi il diffère des solutions 3D existantes basées sur expo-gl (expo-three et react-three-fiber RN). Avec Skia et Filament, l'avenir semble prometteur pour les capacités 2D/3D de React Native.
 
 ---
 
@@ -142,23 +142,23 @@ The Margelo team released an impressive new real-time physically based 3D render
 
 **[Rise Tools](https://rise.tools/)**
 
-A brand-new solution to create Server Driven UIs in React Native, that allows you to deploy new views on the server without rebuilding/resubmitting your app (or even ship an OTA update). It looks philosophically very close to the React Server Components model, but with slightly different tradeoffs: at the cost of some additional manual wiring, this new solution is framework and language agnostic thanks to a protocol that defines how views are serialized. It's still early days, but it looks promising.
+Une toute nouvelle solution pour créer des interfaces utilisateur pilotées par le serveur dans React Native, qui vous permet de déployer de nouvelles vues sur le serveur sans reconstruire/resoumettre votre application (ou même envoyer une mise à jour OTA). Cette solution est philosophiquement très proche du modèle React Server Components, mais avec des compromis légèrement différents : au prix d'un câblage manuel supplémentaire, cette nouvelle solution est agnostique en termes de framework et de langage grâce à un protocole qui définit la façon dont les vues sont sérialisées. Il est encore tôt, mais cela semble prometteur.
 
 ---
 
 - 💸 [RevenueCat Paywalls - Easy remotely configurable paywalls for React Native apps](https://www.revenuecat.com/docs/tools/paywalls?utm_medium=sponsored&utm_source=thisWeekInReact&utm_campaign=general_sponsorship&utm_content=revenuecat-paywalls)
 - 📣 [React Native 0.76 - Android minSdk will bump to Android 7.0 (API 24)](https://github.com/react-native-community/discussions-and-proposals/discussions/802)
-- 👀 [More-reacty-native-demo](https://github.com/EvanBacon/more-reacty-native-demo): Evan Bacon experiments on exposing native views as lowercase intrinsic JSX elements that can be used directly without importing them, like divs on the web.
+- 👀 [More-reacty-native-demo](https://github.com/EvanBacon/more-reacty-native-demo) : Evan Bacon expérimente l'exposition des vues natives en tant qu'éléments JSX intrinsèques en minuscules qui peuvent être utilisés directement sans les importer, comme les divs sur le web.
 - 📖 [Reanimated Cookbook - Real-life examples to help you learn](https://docs.swmansion.com/react-native-reanimated/examples/)
-- 🗓️ [The Geek Conf](https://www.thegeekconf.com/?utm_source=thisweekinreact) - 🇩🇪 Berlin - 18 & 25 July - Get a 10% discount with code "TWIR". Last day tickets for tomorrow remote events !
-- 📜 [Expo - Increase iteration speed with PR previews](https://expo.dev/blog/increase-iteration-speed-with-pr-previews): New feature integrates EAS Updates with GitHub to automatically post OTA updates as PR commit status. A great DX, similar to what Vercel/Netlify offer on the web, but for mobile! My only wish is that they post a QRCode in a sticky PR comment.
-- 📜 [Use a framework to build React Native apps](https://reactnative.dev/blog/2024/06/25/use-a-framework-to-build-react-native-apps): The React Native team finally officially endorses the use of Expo! If you don’t use a framework, you are probably building one.
-- 📜 [From Web to Native with React](https://expo.dev/blog/from-web-to-native-with-react): Kadi from Expo created a great resource to help web devs learn React Native, including a comparison between intrinsic React DOM and React Native elements, how the flexbox model is a little bit different, errors to avoid, new native things to learn, and overall a great overview of anything to be aware of related to React Native or Expo.
-- 📜 [Microsoft - Building React Native for Windows Apps from a Mac](https://devblogs.microsoft.com/react-native/2024-07-18-running-rnw-from-a-mac-md/): Owning a Wndows PC is not required, and you can use a Windows VM through Microsoft Dev Box or Parallels.
+- 🗓️ [The Geek Conf](https://www.thegeekconf.com/?utm_source=thisweekinreact) - 🇩🇪 Berlin - 18 & 25 juillet - 10% de réduction avec le code « TWIR ». Derniers billets pour les événements à distance de demain !
+- 📜 [Expo - Increase iteration speed with PR previews](https://expo.dev/blog/increase-iteration-speed-with-pr-previews) : Une nouvelle fonctionnalité intègre EAS Updates avec GitHub pour poster automatiquement les mises à jour OTA en tant que statut de commit PR. Un excellent DX, similaire à ce que Vercel/Netlify offre sur le web, mais pour le mobile ! Mon seul souhait est qu'ils affichent un QRCode dans un commentaire PR épinglé.
+- 📜 [Use a framework to build React Native apps](https://reactnative.dev/blog/2024/06/25/use-a-framework-to-build-react-native-apps) : L'équipe React Native approuve enfin officiellement l'utilisation d'Expo ! Si vous n'utilisez pas de framework, vous êtes probablement en train d'en construire un.
+- 📜 [From Web to Native with React](https://expo.dev/blog/from-web-to-native-with-react) : Kadi d'Expo a créé une excellente ressource pour aider les développeurs web à apprendre React Native, y compris une comparaison entre les éléments intrinsèques de React DOM et React Native, comment le modèle flexbox est un peu différent, les erreurs à éviter, les nouvelles choses natives à apprendre, et globalement une grande vue d'ensemble de tout ce qu'il faut savoir sur React Native ou Expo.
+- 📜 [Microsoft - Building React Native for Windows Apps from a Mac](https://devblogs.microsoft.com/react-native/2024-07-18-running-rnw-from-a-mac-md/) : Il n'est pas nécessaire de posséder un PC Windows, et vous pouvez utiliser une VM Windows via Microsoft Dev Box ou Parallels.
 - 📜 [App clip with React Native and New Arch (and Swift)](<https://ospfranco.com/app-clip-with-react-native-and-new-arch-(and-swift)/>)
 - 📜 [Bringing native AI to your mobile apps with ExecuTorch - Part 2, Android](https://blog.swmansion.com/bringing-native-ai-to-your-mobile-apps-with-executorch-part-ii-android-29431b6b9f7f)
 - 📜 [Introduction to the React Native OMH Maps Library](https://www.callstack.com/blog/introduction-to-the-react-native-omh-maps-library)
-- 📦 [React Navigation 7.0 RC](https://reactnavigation.org/blog/2024/06/27/react-navigation-7.0-rc/): The final 7.0 release is coming, and I’m particularly excited by the Static API and the introduction of a screen preloading API. This is a first step toward great upcoming perceived performance improvements, that could later leverage upcoming Concurrent React features like notably `<Activity>`.
+- 📦 [React Navigation 7.0 RC](https://reactnavigation.org/blog/2024/06/27/react-navigation-7.0-rc/) : La version finale 7.0 arrive, et je suis particulièrement excité par l'API Statique et l'introduction d'une API de préchargement d'écran. C'est un premier pas vers de grandes améliorations de performances perçues, qui pourraient plus tard tirer parti des fonctionnalités Concurrente de React comme notamment `<Activity>`.
 - 📦 [FlashList 1.7 - New Architecture support!](https://github.com/Shopify/flash-list/releases/tag/v1.7.0)
 - 📦 [Yoga 3.1 - gap in %, layout conformance and regression fixes](https://www.yogalayout.dev/blog/announcing-yoga-3.1)
 - 📦 [Reanimated 3.13 - New Architecture, Tabs Shared Element Transitions](https://github.com/software-mansion/react-native-reanimated/releases/tag/3.13.0)
